@@ -3,6 +3,7 @@ package com.intuit.service;
 import com.intuit.exception.ValidationException;
 import com.intuit.models.*;
 import com.intuit.repository.CarRepository;
+import com.intuit.repository.ImageRepository;
 import com.intuit.response.CarResponse;
 import com.intuit.validator.RequestValidator;
 import org.slf4j.Logger;
@@ -18,31 +19,36 @@ import java.math.BigDecimal;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
 public class CarServiceImpl implements CarService {
 
+    private final RedisService redisService;
+
     private static final Logger LOGGER = LoggerFactory.getLogger(CarServiceImpl.class);
 
     private final CarRepository carRepository;
 
+    private final ImageRepository imageRepository;
+
     private final RequestValidator requestValidator;
 
     @Autowired
-    public CarServiceImpl(CarRepository carRepository,RequestValidator requestValidator) {
+    public CarServiceImpl(RedisService redisService, CarRepository carRepository, ImageRepository imageRepository, RequestValidator requestValidator) {
+        this.redisService = redisService;
         this.carRepository = carRepository;
         this.requestValidator = requestValidator;
+        this.imageRepository = imageRepository;
     }
 
-    @Cacheable(value = "cars", key = "#type")
+//    @Cacheable(value = "cars", key = "#type+price")
     public List<CarResponse> getCarsByTypeAndPrice(String type, BigDecimal price) {
         Sort sort = Sort.by(Sort.Direction.DESC, "price");
         Pageable pageable = PageRequest.of(0, 11, sort);
 
         try {
-            List<Car> cars = carRepository.findTop10ByTypeAndPriceLessThanEqualOrderByPriceDesc(type, price, pageable);
+            List<Car> cars = carRepository.findTop10ByTypeContainingAndPriceLessThanEqualOrderByPriceDesc(type, price, pageable);
             cars = cars.stream().map(c -> getFeatureAndSpecificationForCar(Optional.of(c))).collect(Collectors.toList());
             requestValidator.validateIfCarsExist(cars);
             return cars.stream()
@@ -54,28 +60,38 @@ public class CarServiceImpl implements CarService {
             throw validationException;
         }
         catch (Exception e) {
-            LOGGER.error("Error while fetching cars by type and price: {}", e.getMessage());
+            LOGGER.error("Exception while fetching cars by type and price: {}", e.getMessage());
             throw e;
         }
     }
 
     @Override
-    @Cacheable(value = "cars", key = "#id")
     public CarResponse getCarById(Long id) {
         Optional<Car> optionalCar;
         Car car = null;
         List<CarResponse> similarCarResponse = null;
         try {
-            optionalCar = carRepository.findById(id);
+            car = redisService.getCachedCar(id);
+            if (car == null) {
+                optionalCar = carRepository.findById(id);
+            } else optionalCar = Optional.of(car);
             if (optionalCar.isPresent()) {
+            /*List<Object[]> imageDao = imageRepository.findByCarId(optionalCar.get().getId());
+            List<Image> imageList = imageDao.stream().map(result -> new Image(
+                    (Integer) result[0],
+                    null,
+                    optionalCar.get().getId(),
+                    (Boolean) result[3]
+            )).toList();*/
                 car = getFeatureAndSpecificationForCar(optionalCar);
-                similarCarResponse = carRepository.getTop10SimilarCars(car.getId(), car.getMake(), car.getType(), car.getPrice()).stream()
+                redisService.putCarToCache(car.getId(), car);
+                similarCarResponse = carRepository.getTop10SimilarCars(car.getId(), car.getMake(), car.getType(), car.getPrice(), Pageable.ofSize(10)).stream()
                         .map(CarResponse::fromCar)
                         .collect(Collectors.toList());
                 similarCarResponse = getFeatureAndSpecificationForSimilarCars(similarCarResponse);
             } else throw new ValidationException("Invalid");
-//            requestValidator.validateIfCarsExist(car);//TODO
-        } catch (ValidationException v) {
+        }
+        catch (ValidationException v) {
             LOGGER.error("No car found for the given id: {}", v.getMessage());
             throw v;
         }
@@ -85,31 +101,31 @@ public class CarServiceImpl implements CarService {
     }
 
     @Override
-    @Cacheable(value = "cars", key = "#name")
-    public CarResponse getCarByName(String name) {
-        Optional<Car> optionalCar;
-        Car car = null;
-        List<CarResponse> similarCarResponse = null;
+    public List<CarResponse> getCarByName(String name) {
+        List<Car> cars = null;
         try {
-            optionalCar = carRepository.findByName(name);
-            if (optionalCar.isPresent()) {
-                car = getFeatureAndSpecificationForCar(optionalCar);
-                similarCarResponse = carRepository.getTop10SimilarCars(car.getId(), car.getMake(), car.getType(), car.getPrice()).stream()
-                        .map(CarResponse::fromCar)
-                        .collect(Collectors.toList());
-                similarCarResponse = getFeatureAndSpecificationForSimilarCars(similarCarResponse);
-            } else throw new ValidationException("Invalid");
-//            requestValidator.validateIfCarsExist(car);//TODO
+            cars = carRepository.findTop10ByNameContaining(name);
+            if(!cars.isEmpty()) {
+                /*for(Car car: cars) {
+                    List<Object[]> imageDao = imageRepository.findByCarIdAndDefaultImage(car.getId(), true);
+                    List<Image> imageList = imageDao.stream().map(result -> new Image(
+                            (Integer) result[0],
+                            null,
+                            car.getId(),
+                            (Boolean) result[3]
+                    )).toList();
+                    car.setImages(imageList);
+                }*/
+                cars = cars.stream().map(c -> getFeatureAndSpecificationForCar(Optional.of(c))).collect(Collectors.toList());
+            }
+            else throw new ValidationException("No car with this name in our warehouse");
         } catch (ValidationException v) {
             LOGGER.error("No car found for the given id: {}", v.getMessage());
             throw v;
         }
-        CarResponse carResponse = CarResponse.fromCar(car);
-        carResponse.setSimilarCars(similarCarResponse);
-        return carResponse;
+        return cars.stream().map(CarResponse::fromCar).collect(Collectors.toList());
     }
 
-    @Cacheable(value = "cars", key = "#featurespecscar")
     public Car getFeatureAndSpecificationForCar(Optional<Car> optionalCar) {
         Car car = optionalCar.get();
         List<Object[]> genericObject = null;
@@ -128,6 +144,7 @@ public class CarServiceImpl implements CarService {
         genericObject = carRepository.findSpecs(Collections.singletonList(car.getId()));
         specs = genericObject.stream()
                 .map(result -> new Specification(
+                        (Integer) result[0],
                         (Integer) result[5],
                         (Integer) result[6],
                         (String) result[1],
@@ -140,7 +157,6 @@ public class CarServiceImpl implements CarService {
         return car;
     }
 
-    @Cacheable(value = "cars", key = "#featurespecscars")
     public List<CarResponse> getFeatureAndSpecificationForSimilarCars(List<CarResponse> similarCars) {
         List<Object[]> genericObject = null;
         List<Feature> features = null;
